# servicelib

./: .coveragerc  .editorconfig  .gitignore  MANIFEST.in  README.rst  pyproject.toml  requirements.txt  setup.py  shell.nix  tox.ini
.github/workflows/: main.yml
docs/: conf.py  design.md  index.rst
nix/: sources.json
samples/: README.md  swagger.yaml  workers.yaml
samples/cache_test/: cache_test.py
samples/class_based_services/: class_based_services.py
samples/df/: df.py
samples/dump_config/: dump_config.py
samples/dump_request/: dump_request.py
samples/echo/: echo.py
samples/hello/: hello.py
samples/invalid_worker1/: README.md
samples/invalid_worker2/: README.md  invalid_worker2.py
samples/malformed_response/: malformed_response.py
samples/multiple_services/: multiple_services.py
samples/named_service/: named_service.py
samples/proxy/: proxy.py
samples/raise/: raise.py
samples/sleep/: sleep.py
samples/swagger-ui/: index.html
samples/tar/: tar.py
scripts/: lib.sh  run-client  run-worker  servicelib.ini  servicelib.yaml  start-aux-services
src/servicelib/: __init__.py  cache.py  client.py  compat.py  config.py  core.py  encoding.py  errors.py  falcon.py  inventory.py  logutils.py  metadata.py  process.py  registry.py  results.py  scratch.py  service.py  timer.py  utils.py  uwsgi.ini  wsgi.py
src/servicelib/cmd/: client.py  config_client.py  config_server.py  worker.py
src/servicelib/config/: __init__.py  client.py  cmdline.py  server.py  types.py  wsgi.py
src/servicelib/context/: client.py  (+3 more)
test/: conftest.py  sample-servicelib.ini  test_config.py  test_core.py  test_errors.py  test_inventory.py  test_metadata.py  test_results.py  test_service.py  test_service_context.py
tests/: conftest.py  sample-servicelib.ini  sample-servicelib.yaml  test_cache.py  test_client.py  test_cmd_worker.py  test_config.py  test_config_client.py  test_config_cmd_client.py  test_config_server.py  test_config_types.py  test_core.py  test_errors.py  test_inventory.py  test_process.py  test_registry.py  test_results.py  test_scratch.py  test_service.py  test_service_context.py
(+2 files in other folders)
