[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.black]
line-length = 88

[tool.flit.metadata]
module = "servicelib"
author = "ECMWF"
author-email = "carlos.valiente@ecmwf.int"
classifiers=[
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 2",
  "Programming Language :: Python :: 2.7",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: Implementation :: CPython",
   "Topic :: Software Development :: Libraries :: Application Frameworks",
]
description-file = "README.rst"
home-page = "https://github.com/ecmwf/servicelib"
requires = [
  "falcon",
  "psutil",
  "python-json-logger",
  "python-memcached",
  "pyyaml",
  "redis",
  "requests",
  "six",
  "structlog",
  "uwsgi",
]
requires-python = ">=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*, !=3.5.*, !=3.6.*, !=3.7.*"

[tool.flit.metadata.requires-extra]
docs = ["sphinx"]
tests = [
  "coverage[toml]<5.0",
  "pyflakes",
  "pytest",
  "pytest-console-scripts<1.0.0",  # For Python 2.7 support.
  "pytest-cov",
  "pytest-lazy-fixture",
  "pytest-rerunfailures",
]

[tool.flit.entrypoints.console_scripts]
servicelib-client = "servicelib.cmd.client:main"
servicelib-config-client = "servicelib.cmd.config_client:main"
servicelib-config-server = "servicelib.cmd.config_server:main"
servicelib-worker = "servicelib.cmd.worker:main"

[tool.flit.sdist]
include = [
  "src/servicelib/uwsgi.ini",
]
